fix reading alias sklearn

--- a/snoopy.ipynb
+++ b/snoopy.ipynb
@@ -10,51 +10,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": null,
    "id": "802ed555-d9a6-4dee-9141-93e28becaf66",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pythonLicenses Version: 20250808_09-18-50 \n",
-      "snoopy_entry_point is running ...\n",
-      "snoopy_entry_pointext  .cpp\n",
-      "(*** Bob:  .cpp\n",
-      "got to if cpp\n",
-      "=== 🐍 Package or file dependencies ===\n",
-      "📄 /home/bob/examples/cpp_dgemm/cpp_dgemm.cpp\n",
-      "  #include <# Makefile\n",
-      "\n",
-      "CXX = g++\n",
-      "CXXFLAGS = -Wall -O2\n",
-      "LDFLAGS = -lblas\n",
-      "TARGET = cpp_dgemm\n",
-      "OBJS = cpp_dgemm.o\n",
-      "\n",
-      ".PHONY: all clean\n",
-      "\n",
-      "all: $(TARGET)\n",
-      "\n",
-      "$(TARGET): $(OBJS)\n",
-      "\t$(CXX) -o $@ $^ $(LDFLAGS)\n",
-      "\n",
-      "%.o: %.cpp\n",
-      "\t$(CXX) $(CXXFLAGS) -c $<\n",
-      "\n",
-      "clean:\n",
-      "\trm -f $(TARGET) $(OBJS)\n",
-      ">\n",
-      "  #include <cblas.h>\n",
-      "  #include <cstring>\n",
-      "  #include <iomanip>\n",
-      "  #include <iostream>\n",
-      "  #include <random>\n",
-      "  #include <vector>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "import os\n",
@@ -75,7 +34,6 @@
     "            dict_of_dicts[row['package']] = row\n",
     "    return dict_of_dicts\n",
     "\n",
-    "\n",
     "def summarize_imports(import_dict, makefile_suggestions=None):\n",
     "    # summarize the imports I have used\n",
     "    print(\"=== 🐍 Package or file dependencies ===\")\n",
@@ -87,6 +45,7 @@
     "            print(f\"📄 {file}\")\n",
     "            for imp in sorted(imports):\n",
     "                impStr = str(imp).lower()\n",
+    "                print(f\"impStr: {impStr}\")\n",
     "                license_info = lookup[impStr]['license'] # <-- your original license lookup logic\n",
     "                print(f\"  {imp} → {license_info}\")\n",
     "\n",
@@ -123,8 +82,8 @@
     "def parse_python_file(filepath):\n",
     "    with open(filepath, \"r\", encoding=\"utf-8\") as f:\n",
     "        node = ast.parse(f.read(), filename=filepath)\n",
-    "    return sorted({n.name for n in ast.walk(node) if isinstance(n, ast.Import) for n in n.names} |\n",
-    "                  {n.module for n in ast.walk(node) if isinstance(n, ast.ImportFrom) and n.module})\n",
+    "    return sorted({n.name.split('.')[0]  for n in ast.walk(node) if isinstance(n, ast.Import) for n in n.names} |\n",
+    "                  {n.module.split('.')[0]  for n in ast.walk(node) if isinstance(n, ast.ImportFrom) and n.module})\n",
     "\n",
     "def parse_ipynb_file(filepath):\n",
     "    try:\n",
@@ -139,13 +98,11 @@
     "        if cell.cell_type == \"code\":\n",
     "            try:\n",
     "                node = ast.parse(cell.source)\n",
-    "                imports |= {n.name for n in ast.walk(node) if isinstance(n, ast.Import) for n in n.names}\n",
-    "                imports |= {n.module for n in ast.walk(node) if isinstance(n, ast.ImportFrom) and n.module}\n",
+    "                imports |= {n.name.split('.')[0]  for n in ast.walk(node) if isinstance(n, ast.Import) for n in n.names}\n",
+    "                imports |= {n.module.split('.')[0]  for n in ast.walk(node) if isinstance(n, ast.ImportFrom) and n.module}\n",
     "            except:\n",
     "                pass\n",
     "    return sorted(imports)\n",
-    "\n",
-    "    return sorted(includes)\n",
     "\n",
     "def parse_c_cpp_file(filepath):\n",
     "    \"\"\"\n",
@@ -198,8 +155,6 @@
     "\n",
     "    return includes, makefile_suggestion\n",
     "\n",
-    "\n",
-    "\n",
     "def snoopy_entry_point(path):\n",
     "    print(f\"snoopy_entry_point is running ...\")\n",
     "\n",
@@ -239,6 +194,7 @@
     "\n",
     "    summarize_imports(all_imports)\n",
     "\n",
+    "path  = '/home/bob/examples/wattznSam/wattzn/jupyter/code/DataConsolidation.ipynb'\n",
     "path = '/home/bob/examples/cpp_dgemm/cpp_dgemm.cpp'\n",
     "lookup = load_license_lookup(csv_path=\"pythonLicenses.csv\")\n",
     "print(f\"pythonLicenses Version: {lookup['__pythonLicenses__']['version']}\")\n",
@@ -257,77 +213,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "dba32848-1bdf-447f-9b1b-1178341e83ff",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# csv_path=\"pythonLicenses.csv\"\n",
-    "# with open(csv_path, newline='') as f:\n",
-    "#     reader = csv.DictReader(f)\n",
-    "#     for row in reader:\n",
-    "#         # print(row['package'])\n",
-    "#         # print( { 'license': row['license'], } )\n",
-    "#         if row['package'] == '__snoopy_version__':\n",
-    "#             __Version__ = row['version']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 80,
-   "id": "5230c26b-b739-4be2-beb2-7542068ced16",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/bob/examples/cpp_dgemm/cpp_dgemm.cpp True\n"
-     ]
-    }
-   ],
-   "source": [
-    "from pathlib import Path\n",
-    "\n",
-    "\n",
-    "path = '/home/bob/examples/cpp_dgemm/cpp_dgemm.cpp'\n",
-    "path = Path(path)\n",
-    "print(path, path.is_file())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
-   "id": "cf55d366-8d65-47da-904b-3d97db7e8080",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<bound method Path.is_file of PosixPath('../examples/cpp_dgemm/cpp_dgemm.cpp')>"
-      ]
-     },
-     "execution_count": 67,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "path."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7c503fba-f121-4f3b-a1c5-0da788f75d7b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a5d6af4c-a216-403b-86b3-7f37158530a0",
    "metadata": {},
    "outputs": [],
    "source": []
